--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "src/*.js",
+      "src": "./src/*.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/src"
+      "dest": "./src"
     }
   ]
 }
