--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "./src/*.js",
+      "src": "src/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(src.*)",
-      "dest": "/"
+      "src": "/(.*)",
+      "dest": "/src/index.js"
     }
   ]
 }
