--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "src/index.js",
+      "src": "*.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/src/index.js"
+      "dest": "/"
     }
   ]
 }
